Scrape download URLs from shillerdata.com for latest data
- Add BeautifulSoup scraper to get download URLs from shillerdata.com
- Fail fast if URLs cannot be scraped (no fallbacks)
- Add beautifulsoup4 to requirements.txt
- Update workflow to use requirements.txt
- Now getting data through October 2025 instead of September 2023

--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Install Python dependencies
       run: |
-        pip install pandas openpyxl xlrd
+        pip install -r requirements.txt
 
     - name: Download latest data
       run: |
